--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
   </div>
   <div id="header">
     <div class="header-menu style-one bg-white">
-      <div class="container flex-between h-80"><a class="menu-left-block" href="home.html"><img
+      <div class="container flex-between h-80"><a class="menu-left-block" href="index.html"><img
             class="menu-logo display-block" src="assets/images/Logo.png" alt="logo" /></a>
         <div class="menu-center-block h-100">
           <ul class="menu-nav flex-item-center h-100">
-            <li class="nav-item h-100 flex-center home"><a class="nav-link" href="home.html">Home </a>
+            <li class="nav-item h-100 flex-center home"><a class="nav-link" href="index.html">Home </a>
               <ul class="sub-nav hidden" style="display: none;">
                 <li class="sub-nav-item active"><a class="sub-nav-link" href="index.html">Payment Solution</a></li>
                 <li class="sub-nav-item"> <a class="sub-nav-link" href="home2.html">Financial Planning</a></li>
@@ -107,7 +107,7 @@
           <div class="container">
             <ul class="menu-nav-mobile h-100 pt-4 pb-4">
               <li class="nav-item-mobile h-100 flex-column gap-8 pt-8 pb-8 pl-12 pr-12 pointer home"><a
-                  class="fs-14 nav-link-mobile" href="home.html">Home </a>
+                  class="fs-14 nav-link-mobile" href="index.html">Home </a>
                 <ul class="sub-nav-mobile" style="display: none;">
                   <li class="sub-nav-item pl-12 pr-12 pt-8 pb-8 active"><a class="sub-nav-link fs-14"
                       href="index.html">Payment Solution</a></li>
@@ -988,7 +988,7 @@
                 <div class="footer-nav-item">
                   <div class="item-heading text-button-small text-white">Quick Links</div>
                   <ul class="list-nav mt-4">
-                    <li class="mt-12"><a class="caption1 text-line hover-underline" href="home.html">Home</a></li>
+                    <li class="mt-12"><a class="caption1 text-line hover-underline" href="index.html">Home</a></li>
                     <li class="mt-12"><a class="caption1 text-line hover-underline" href="about.html">About us</a></li>
                     <li class="mt-12"><a class="caption1 text-line hover-underline" href="services.html">Services</a>
                     </li>
