--- a/free-demond-acc.html
+++ b/free-demond-acc.html
@@ -330,13 +330,13 @@
                       <br><br>
                     <label for=""
                       class="w-100 bg-surface text-secondary caption1 pl-16 pr-16 pt-12 pb-12 bora-8 mt-4">Aadhar
-                      card :</label>
+                      Card :</label>
                     <input class="w-100 bg-surface text-secondary caption1 pl-16 pr-16 pt-12 pb-12 bora-8" type="file"
                       id="aadhar_card" name="aadhar_card" accept=".jpg,.jpeg,.png,.pdf">
                       <br> <br>
                     <label for=""
-                      class="w-100 bg-surface text-secondary caption1 pl-16 pr-16 pt-12 pb-12 bora-8 mt-4">bank
-                      passbook :</label>
+                      class="w-100 bg-surface text-secondary caption1 pl-16 pr-16 pt-12 pb-12 bora-8 mt-4">Bank
+                      Passbook :</label>
                     <input class="w-100 bg-surface text-secondary caption1 pl-16 pr-16 pt-12 pb-12 bora-8" type="file"
                       id="bank_cheque" name="bank_cheque" accept=".jpg,.jpeg,.png,.pdf">
                   </div>
@@ -351,7 +351,7 @@
           </div>
         </div>
       </div>
-    </div><a class="scroll-to-top-btn" href="#header"><i class="ph-bold ph-caret-up"></i></a>
+    </div><a class="scroll-to-top-btn" style="margin-bottom: 20px;" href="#header"><i class="ph-bold ph-caret-up"></i></a>
   </div>
 
   <div id="footer">
