--- a/index.html
+++ b/index.html
@@ -948,7 +948,7 @@
         </div>
       </div>
     </div>
-    <div class="style-three"><a class="scroll-to-top-btn" href="#header" style="margin-bottom: 20px;"><i class="ph-bold ph-caret-up"></i></a></div>
+    <div class="style-three"><a class="scroll-to-top-btn" style="margin-bottom: 20px;" href="#header" style="margin-bottom: 20px;"><i class="ph-bold ph-caret-up"></i></a></div>
     <div class="pb-100"></div>
   </div>
   <div id="footer">
