--- a/Financial Planning.html
+++ b/Financial Planning.html
@@ -219,7 +219,7 @@
           </div>
           </div>
         </div>
-      </div><a class="scroll-to-top-btn" href="#header"><i class="ph-bold ph-caret-up"></i></a>
+      </div><a class="scroll-to-top-btn" style="margin-bottom: 20px;" href="#header"><i class="ph-bold ph-caret-up"></i></a>
     </div>
     <div id="footer">
       <div class="style-one">
