--- a/about.html
+++ b/about.html
@@ -402,7 +402,7 @@
           </div>
         </div>
       </div>
-      <div class="style-three"><a class="scroll-to-top-btn" href="#header"><i class="ph-bold ph-caret-up"></i></a></div>
+      <div class="style-three"><a class="scroll-to-top-btn" style="margin-bottom: 20px;" href="#header"><i class="ph-bold ph-caret-up"></i></a></div>
       <div class="pb-100"></div>
   </div>
   <div class="service-style-five mt-100">
@@ -434,7 +434,7 @@
        </div>
     </div>
  </div>
-      </div><a class="scroll-to-top-btn" href="#header"><i class="ph-bold ph-caret-up"></i></a>
+      </div><a class="scroll-to-top-btn"  href="#header"><i class="ph-bold ph-caret-up"></i></a>
     </div>
     <div id="footer">
       <!-- <div class="cta-block style-two">
