--- a/contact.html
+++ b/contact.html
@@ -276,7 +276,7 @@
         <div class="map-block mt-100">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3759.1251313818925!2d74.205523!3d19.5791391!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bdd00349b0dbad7%3A0x8eace314080d1360!2skadlag%20Investment!5e0!3m2!1sen!2sin!4v1701411964962!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-      </div><a class="scroll-to-top-btn" href="#header"><i class="ph-bold ph-caret-up"></i></a>
+      </div><a class="scroll-to-top-btn" style="margin-bottom: 20px;" href="#header"><i class="ph-bold ph-caret-up"></i></a>
     </div>
       
     <div id="footer">
